chore: added automation

--- a/.devcontainer /devcontainer.json
+++ b/.devcontainer /devcontainer.json
@@ -1,7 +1,6 @@
 {
-    "name": "Olive",
+    "name": "Olive AI",
     "image": "mcr.microsoft.com/devcontainers/python:3.12-bullseye",
-
     "features": {
         "ghcr.io/devcontainers/features/node:1": {
             "version": "lts"
@@ -11,7 +10,6 @@
             "moby": true
         }
     },
-
     "customizations": {
         "vscode": {
             "settings": {
@@ -35,13 +33,55 @@
             ]
         }
     },
-
     "postCreateCommand": "sudo apt-get update && sudo apt-get install -y --no-install-recommends coreutils apt-transport-https ca-certificates gnupg curl && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && echo 'deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main' | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && sudo apt-get update && sudo apt-get install -y google-cloud-cli && pipx install uv && cd /workspaces/${localWorkspaceFolderBasename} && uv venv && echo 'source /workspaces/${localWorkspaceFolderBasename}/.venv/bin/activate' >> ~/.bashrc && . .venv/bin/activate && uv pip sync uv.lock && uv pip install -e .",
-
-    "forwardPorts": [8000, 8008],
-
+    "forwardPorts": [
+        8000,
+        8008
+    ],
     "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
     "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/${localWorkspaceFolderBasename},type=bind,consistency=cached",
-
+    "remoteUser": "vscode"
+}{
+    "name": "Olive Agent",
+    "image": "mcr.microsoft.com/devcontainers/python:3.12-bullseye",
+    "features": {
+        "ghcr.io/devcontainers/features/node:1": {
+            "version": "lts"
+        },
+        "ghcr.io/devcontainers/features/docker-in-docker:2": {
+            "version": "latest",
+            "moby": true
+        }
+    },
+    "customizations": {
+        "vscode": {
+            "settings": {
+                "python.defaultInterpreterPath": "/workspaces/${localWorkspaceFolderBasename}/.venv/bin/python",
+                "python.linting.pylintEnabled": true,
+                "python.linting.enabled": true,
+                "python.formatting.provider": "black",
+                "editor.formatOnSave": true,
+                "python.terminal.activateEnvironment": false // We handle activation via .bashrc
+            },
+            "extensions": [
+                "ms-python.python",
+                "ms-python.vscode-pylance",
+                "ms-python.pylint",
+                "ms-azuretools.vscode-docker",
+                "googlecloudtools.cloudcode",
+                "bierner.markdown-preview-github-styles",
+                "streetsidesoftware.code-spell-checker",
+                "njpwerner.autodocstring",
+                "charliermarsh.ruff"
+            ]
+        }
+    },
+    "postCreateCommand": "sudo apt-get update && sudo apt-get install -y --no-install-recommends coreutils apt-transport-https ca-certificates gnupg curl && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg && echo 'deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main' | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list && sudo apt-get update && sudo apt-get install -y google-cloud-cli && pipx install uv && cd /workspaces/${localWorkspaceFolderBasename} && uv venv && echo 'source /workspaces/${localWorkspaceFolderBasename}/.venv/bin/activate' >> ~/.bashrc && . .venv/bin/activate && uv pip sync uv.lock && uv pip install -e .",
+    "forwardPorts": [
+        8000,
+        8008
+    ],
+    "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
+    "workspaceMount": "source=${localWorkspaceFolder},target=/workspaces/${localWorkspaceFolderBasename},type=bind,consistency=cached",
     "remoteUser": "vscode"
 }
